--- a/css/main.scss
+++ b/css/main.scss
@@ -20,8 +20,8 @@ $brand-color:      #0077CC;
 //$clemson-purple:      #522d80;
 //$clemson-orange:      #f66733;
 
-$clemson-purple: #782F40;
-$clemson-orange: #CEB888;
+$clemson-purple:  #CEB888;
+$clemson-orange:  #782F40;
 
 
 $grey-color:       #828282;
